--- a/themes/docsy/assets/scss/_variables.scss
+++ b/themes/docsy/assets/scss/_variables.scss
@@ -61,9 +61,9 @@ $link-hover-color: darken($link-color, 15%) !default;
 $link-hover-decoration: none !default;
 
 // Fonts
-
-$google_font_name: "Open Sans" !default;
-$google_font_family: "Open+Sans:300,300i,400,400i,700,700i" !default;
+// - use system-ui that is same as -aplle-system on every platform
+$google_font_name: "system-ui" !default;
+$google_font_family: "system-ui:300,300i,400,400i,700,700i" !default;
 $web-font-path: "https://fonts.googleapis.com/css?family=#{$google_font_family}&display=swap";
 
 $td-fonts-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -130,3 +130,6 @@ $navbar-dark-disabled-color: rgba($white, 0.25) !default;
 
 // The yiq lightness value that determines when the lightness of color changes from "dark" to "light".
 $yiq-contrasted-threshold: 200 !default;
+
+// table
+$table-cell-padding:          .3rem !default;
